--- a/style.css
+++ b/style.css
@@ -1,34 +1,116 @@
 body{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-h1{
-    margin: 0;
+
+header{
+    width: 126px;
+    height: 42px;
+    margin-left: 72px;
+    margin-top: 27px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 32px;
+    line-height: 42px;
 }
-#container{
+header span{
+    color: #4B9760;
+}
+main{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
 }
-.flexItem{
+#loadedPic{
+    width: 1130px;
+    height: 532px;
+    margin-left: 155px;
+    margin-top: 34px;
+    border-radius: 10px;
+}
+/* #loadingPic{
+    width: 1130px;
+    height: 532px;
+    margin-left: 80px;
+    margin-top: 34px;
+    background-color: rgb(146, 49, 49);
+} */
+
+footer{
+    margin-top: 39px;
+    background-color:#4B9760;
+    height: 171px;
+    width: 1440px;
+    color: #FFFFFF;
     display: flex;
-    justify-content: center;
 }
-#pic{
-    width: 700px;
-    height: 820px;
+#previousBtn {
+    background: url('skip_previous.svg');
+    height: 23px;
+    width: 23px;
+    display: inline-block;
+    margin-left: 620.5px;
+    margin-top: 54.5px;
+    margin-bottom: 93.5px;
+    margin-right: 11.5px;
 }
-#imgSpace{
-    width: 1080px;
-    height: 900px;
-    border-bottom: 30px solid white;
-    border-top: 30px solid white;;
-    /* background-color: yellowgreen; */
+#previousBtn:hover{
+    cursor: pointer;
 }
-#btnSpace{
+#loadPrev{
+    height: 32px;
+    width: 29px;
+    display: inline-block;
+    margin-top: 50px;
+    margin-bottom: 89px;
+    margin-right: 29px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 16px;
+    color: #FFFFFF;
+    text-align: left;
 }
-#btn1{
-    margin-right: 8px;
+
+#indexNo{
+    margin-top: 41px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 38px;
+    line-height: 49px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-bottom: 81px;
 }
-#btn2{
-    margin-right: 8px;
+
+#loadNext{
+    height: 32px;
+    width: 29px;
+    display: inline-block;
+    margin-top: 50px;
+    margin-bottom: 89px;
+    margin-left: 29px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 16px;
+    color: #FFFFFF;
+}
+
+#nextBtn{
+    background: url('skip_next.svg');
+    height: 23px;
+    width: 23px;
+    display: inline-block;
+    margin-right: 620.5px;
+    margin-top: 54.5px;
+    margin-bottom: 93.5px;
+    margin-left: 11.5px;
+}
+#nextBtn:hover{
+    cursor: pointer;
 }
